--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">JopFinderApp</string>
+    <string name="jobfinder">JobFinder</string>
+    <string name="jopfinder_icon">jopFinder icon</string>
+    <string name="explore_your_dream_job">Explore Your Dream Jobs</string>
 </resources>
