--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,19 @@
     <string name="sign_in">Sign In</string>
     <string name="don_t_have_an_account">Don\'t have an account?</string>
     <string name="create_account">Create account</string>
+    <string name="app_icon">app icon</string>
+    <string name="welcome_image">welcome image</string>
+    <string name="welcome_job_hunter">Welcome Job Hunter</string>
+    <string name="i_m_happy_to_see_you_again_let_s_explore_new_n_dream_jobs_for_your_career">I\'m happy to see you again, let\'s explore new \n dream jobs for your career</string>
+    <string name="start_explore_jobs">Start Explore Jobs</string>
+    <string name="hello_blank_fragment">Hello from account</string>
+    <string name="company_icon">company icon</string>
+    <string name="home">Home</string>
+    <string name="bookmarks">Bookmarks</string>
+    <string name="application">Application</string>
+    <string name="my_account">My Account</string>
+    <string name="shared_fragment">shared fragment</string>
+    <string name="review">Review</string>
+    <string name="not_suitable">Not Suitable</string>
+    <string name="interview">Interview</string>
 </resources>
